<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidYAMLCal</string>
    <string name="title_activity_main">YAML Cal</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="events_title">Events</string>
    <string name="dash">-</string>
    <string name="at">At</string>
    <string name="add_event">Add Event</string>
    <string name="address_hint">Address</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="location_hint">Location</string>
    <string name="category">Category</string>
    <string name="category_hint">Category</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="add">Add</string>
    <string name="offline">Offline</string>
    <string name="week_view">Week View</string>
    <string name="month_view">Month View</string>
    <string name="day_view">Day View</string>
    <string name="edit_event_title">Edit Event</string>
    <string name="start_time_button">Starting Time</string>
    <string name="start_date_button">Starting Date</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="refresh">Refresh</string>

</resources>
