<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_event"
        android:title="@string/add_event"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/offline"
        android:title="@string/offline"
        android:checkable="true"
        android:icon="@android:drawable/presence_offline"
        app:showAsAction="never"/>

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/day_view"
            android:title="@string/day_view"
            android:icon="@android:drawable/ic_menu_day"
            app:showAsAction="never"/>

        <item
            android:id="@+id/week_view"
            android:title="@string/week_view"
            android:icon="@android:drawable/ic_menu_week"
            app:showAsAction="never"/>

        <item
            android:id="@+id/month_view"
            android:title="@string/month_view"
            android:icon="@android:drawable/ic_menu_month"
            app:showAsAction="never"/>

    </group>

</menu>